--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server/server.js",
-    "start": "node server/server.js"asdfasdfasf
+    "start": "node server/server.js"
   },
   "author": "",
   "license": "ISC",
