--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "bulma":"0.9.3",
     "@fortawesome/fontawesome-free": "5.15.4",
+    "axios": "^0.24.0",
+    "bulma": "0.9.3",
+    "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
