--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.4",
     "axios": "^0.24.0",
+    "bcryptjs": "2.4.3",
     "bulma": "0.9.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
